tests/ui/resolve/issue-65025-extern-static-parent-generics.stderr
error[E0401]: can't use generic parameters from outer item
  --> $DIR/issue-65025-extern-static-parent-generics.rs:3:28
   |
LL | unsafe fn foo<A>() {
   |               - type parameter from outer item
LL |     extern "C" {
LL |         static baz: *const A;
   |                            ^ use of generic parameter from outer item

error: aborting due to previous error

For more information about this error, try `rustc --explain E0401`.
